# zrythm

./: .SRCINFO  .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .codecov.yml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .qmlformat.ini  .qmllint.ini  .travis.yml  AGENTS.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_GUIDELINES  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTOR_CERTIFICATE_OF_ORIGIN  COPYING  COPYING.CC-BY-SA-3  COPYING.CC-BY-SA-4  COPYING.GFDL  CTestConfig.cmake  CTestCustom.cmake  Doxyfile  Doxyfile-mcss  Doxyfile.cfg  Doxyfile.cfg.in  GOVERNANCE.md  HACKING.md  INSTALL  INSTALL.md  INSTALL.rst  (+26 more)
data/: CMakeLists.txt  COPYING  Info.plist.in  InfoPlist.strings.in  Makefile.am  Makefile.in  appdmg.json  gen-appdata-xml.py  gen-gschema.py  gschemas.compiled  gtksourceview-monokai-extended.xml  meson.build  online.alextee.zrythm.gschema.xml  org.zrythm.Zrythm-mime.xml  org.zrythm.Zrythm.appdata.xml.in  org.zrythm.Zrythm.gschema.xml  org.zrythm.gschema.xml  settings.ini  theme.css  zrythm-completion.bash  zrythm.desktop  zrythm.desktop.in  zrythm.icns  zrythm_gdb.in  zrythm_launch.in  zrythm_lldb.in  zrythm_valgrind.in
data/css-themes/: CMakeLists.txt  fruity-theme.css  meson.build  zrythm-theme.css
data/cursors/: rendersvgs.py
data/icon-themes/: CMakeLists.txt  install_tracktype_icons.py  install_tracktype_icons.sh.in  meson.build
data/osx/: Info.plist  Info.plist.in  appdmg.json  gtk3-launcher.sh  zrythm-gtk3.bundle  zrythm.icns
data/platform/: CMakeLists.txt
data/plugins/: CMakeLists.txt  compressor.dsp.in  cubic_distortion.dsp.in  flanger.dsp.in  gate_stereo.dsp.in  gen-juce.py  gen-lv2-bundle-for-test.py  gen-lv2-bundle-for-test.sh.in  gen-lv2-from-generated.sh.in  gen-lv2.py  gen-lv2.py.in  gen-lv2.sh.in  highpass_filter.dsp.in  lowpass_filter.dsp.in  meson.build  parametric_eq.dsp.in  peak_limiter.dsp.in  phaser.dsp.in  smooth_delay.dsp.in  triple_synth.dsp.in  wah4.dsp.in  white_noise.dsp.in  zita_rev1.dsp.in  zrythm-utils.lib
data/schemas/: README.md  project.schema.json
data/scripts/: README  create-geonkick-with-fx-track.scm  create-midi-track-with-notes.scm  hello-world.scm  meson.build  print-all-tracks.scm
data/windows/: CMakeLists.txt  meson.build  zrythm.rc  zrythm.rc.in
doc/: CMakeLists.txt  Doxyfile-mcss.in  Doxyfile.cfg.in  cyaml_schemas.h  doxextra.css  doxyboot.js  footer.html  group_defs.dox  header.html  mainpage.h  meson.build  processing_cycle.h  release_checklist.h  weblate.h
doc/dev/: AI_POLICY.md  CMakeLists.txt  Doxyfile-mcss.in  Doxyfile.cfg.in  chord_suggestion_engine.md  conf.py.in  cyaml_schemas.h  debugging.md  group_defs.dox  gtk_tips.h  gtk_tips.md  index.rst  mainpage.h  (+18 more)
ext/: CMakeLists.txt  meson.build
inc/: Wrapper.h  app_settings.h  carla_wrapper.h  dir.h  doctest_wrapper.h  gtk_wrapper.h  init.h  libadwaita_wrapper.h  libpanel_wrapper.h  meson.build  project.h  settings.h  settings_manager.h  zrythm.h  zrythm_app.h  zrythm_application.h  zrythm_system.h
plugins/: README.md  ZLFO.ttl.in  manifest.ttl.in  meson.build  meson_options.txt
po/: CMakeLists.txt  LINGUAS  POTFILES  af_ZA.po  ar.po  ca.po  collect_translatables.py  cs.po  da.po  de.po  el.po  en.po  en_GB.po  enm.po  eo.po  es.po  et.po  fa.po  fi.po  fr.po  gd.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  it.po  ja.po  ko.po  locales.h.in  meson.build  mk.po  ms.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  pt_PT.po  (+15 more)
resources/: CMakeLists.txt  config.js.in  gen-gtk-gresources-xml.py  gen-gtk-resources-xml.py  gen-gtk-resources-xml.scm  gen_gtk_resources_xml_wrap.sh  main-window.ui  meson.build  theme.css
scripts/: collect_srcs.sh  collect_translatables.py  collect_translatables.sh  copy_dlls.sh  create-tarball.sh  create_github_release.py  create_zrythm_accounts_product.py  deploy_file_to_s3.py  dox_to_sphinx.py  exif_check.sh  file_contents_to_hex_array.py  gen-appdata-xml.scm  gen-gschema.scm  gen-gtk-resources-xml.scm  gen-schema.scm.in  gen-test-project.scm  gen-translators-list.scm  gen_completions.sh  generic_guile_wrap.sh  gschema-gen.scm  guile-gen-docs.scm  guile-gen-texi-docs.scm  guile-snarf-wrap.scm  guile-utils.scm  guile_gen_texi_docs.sh  have_unlimited_mem.sh  mac_codesign_and_notarize_app.sh  mac_codesign_and_notarize_dmg.sh  mac_codesign_app_for_debug.sh  mac_codesign_dmg_for_debug.sh  meson-post-install.scm  meson-post-install.sh  meson.build  meson_dist.sh  meson_post_install.py  meson_post_install.scm  meson_post_install_wrap.sh  osx_startup_script.sh  package-deb.sh  package-pkg.sh  (+9 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  Wrapper.h  Wrapper.m  channel_manager.c  gen-translators-list.py  global_state.cpp  global_state.h  globals.cpp  init.c  juce_wrapper.h  main.c  main.cpp  meson.build  project.c  project.cpp  project.h  project_info.cpp  project_templates_model.h  recent_projects_model.cpp  recent_projects_model.h  settings.c  settings_manager.c  zrythm-config.h.in  zrythm.c  zrythm.cpp  zrythm.gresource.xml  zrythm.h  zrythm_app.c  zrythm_app.cpp  zrythm_application.cpp  zrythm_system.c
test/: automations.c  automations.h  main.c  meson.build
tests/: 1_empty_track_1_track_with_data.mid  1_track_with_data.mid  CMakeLists.txt  au_plugins.txt  empty_midi_file_type1.mid  format_1_two_tracks_with_data.mid  guile-config.scm.in  guile_runner.c  loop0_ref.mid  loop1_ref.mid  loop2_ref.mid  loop3_ref.mid  loop4_ref.mid  loopbase.mid  meson.build  pipewire-server.conf  project.c  project.cpp  those_who_remain.mid  zrythm-test-config.h.in  zrythm.c  zrythm.cpp  zrythm_app.c  zrythm_app.cpp
tools/: .clang-format  asan_suppressions.supp  check_have_unlimited_memlock.sh  convert_svg_to_ico.sh  generate-sbom.py  get_lv2_bundle_uri.sh  get_vst_path.sh  lv2lint_wrapper.sh  memleak_checker.sh  meson.build  replace_license.py  rtsan_suppressions.supp  run_callgrind.sh  run_clang_tidy.sh  run_massif.sh  run_valgrind.sh  sanitizer_blacklist.txt  stoat_blacklist.txt  stoat_suppressions.txt  stoat_whitelist.txt  uncrustify.cfg  vg.sup
(+10863 files in other folders)
